--- a/ajax.html
+++ b/ajax.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Request JSON Test</title>
+  <title>Covid 19 Track</title>
   <script>
 
       // Method 1 using aync and await
